--- a/frontend/src/components/styles/NavigationComponent.css
+++ b/frontend/src/components/styles/NavigationComponent.css
@@ -1,6 +1,6 @@
 /* Estilos para la barra lateral */
 .sidebar {
-  height: 100vh;
+  height: auto;
   background-color: #2d2d34;
   box-shadow: 3px 0px 10px rgba(0, 0, 0, 0.2);
   padding: 10px 0;
